--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "cry_script"
+name = "language"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.release]
-# or "z"
-opt-level = "s"
-
 [dependencies]
-colored = "*"
-rand = "0.8.5"
+cry_script = { path = "crates/cry_script" }
+utils = { path = "crates/utils" }
+static-rc = "0.5.0"
+sysinfo = "*"
+
+[dependencies.pprof]
+version = "0.10.0"
+features = ["flamegraph"]
