--- a/crates/cry_script/Cargo.toml
+++ b/crates/cry_script/Cargo.toml
@@ -10,6 +10,7 @@ utils = { path = "../utils" }
 colored = "2.0.0"
 rand = "0.8.5"
 include_dir = "0.7.2"
+slotmap = "1.0.6"
 
 [lib]
 name = "cry_script"
